--- a/package.json
+++ b/package.json
@@ -5,6 +5,25 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
+    "nodemon": "^3.1.9"
+  },
+  "version": "1.0.0",
+  "description": "You have been hired by a local restaurant to develop a simplified backend system for managing their online menu. The restaurant needs the following functionality:",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RohanSinghJaglan/Modifying-data-through-API-using-API-client---Practice-assignment-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/RohanSinghJaglan/Modifying-data-through-API-using-API-client---Practice-assignment-1/issues"
+  },
+  "homepage": "https://github.com/RohanSinghJaglan/Modifying-data-through-API-using-API-client---Practice-assignment-1#readme"
 }
